mehr afzar adapter done

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "require": {
         "php": ">=5.4",
-        "illuminate/support": "5.x.x"
+        "illuminate/support": "5.x.x",
+        "ext-soap": "*x"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
