--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "require": {
         "php": ">=5.4",
         "illuminate/support": "5.x.x",
-        "ext-soap": "*x"
+        "ext-soap": "*",
+        "ext-curl": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
