--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "keraken/laravel-iranian-sms",
+    "name": "iamtartan/laravel-iranian-sms",
     "description": "Laravel 5.x sms handler for working with most iranian sms operators",
     "keywords": ["laravel", "sms", "iran-sm", "iranian-sms", "magfa", "adp", "kave-negar", "mehr-afraz"],
     "type": "laravel-component",
@@ -16,12 +16,12 @@
     ],
     "autoload": {
         "psr-4": {
-            "Keraken\\IranianSms\\": "src"
+            "Tartan\\IranianSms\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Keraken\\IranianSms\\Tests\\": "tests"
+            "Tartan\\IranianSms\\Tests\\": "tests"
         }
     },
     "require": {
