--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "php": ">=5.4",
         "illuminate/support": "5.x.x",
         "ext-soap": "*",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "ghasedak/php":"dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
